--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
 		"parcel-plugin-svelte": "^4.0.6",
 		"pug": "^3.0.0",
 		"stylus": "^0.54.8",
-		"svelte": "^3.24.1",
-		"svelte-preprocess": "^4.2.1"
+		"svelte": "^3.26.0",
+		"svelte-preprocess": "^4.3.0"
 	},
 	"scripts": {
 		"hack": "parcel index.html --no-cache",
 		"ship": "parcel build index.html"
+	},
+	"dependencies": {
+		"proc": "^0.2.2"
 	}
 }
