--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-	"browser": "index.html",
-	"browserslist": [
-		"last 1 chrome versions"
-	],
+	"license": "CC-BY-NC-SA-4.0",
 	"devDependencies": {
+		"clean-webpack-plugin": "^3.0.0",
+		"coffee-loader": "^2.0.0",
 		"coffeescript": "^2.5.1",
-		"parcel": "^1.12.4",
-		"parcel-plugin-svelte": "^4.0.6",
+		"copy-webpack-plugin": "^7.0.0",
+		"html-webpack-plugin": "^4.5.1",
 		"pug": "^3.0.0",
 		"stylus": "^0.54.8",
-		"svelte": "^3.29.4",
-		"svelte-preprocess": "^4.5.2"
+		"svelte": "^3.31.2",
+		"svelte-loader": "^2.13.6",
+		"svelte-preprocess": "^4.6.1",
+		"webpack": "^5.13.0",
+		"webpack-cli": "^4.3.1",
+		"webpack-dev-server": "^3.11.2"
 	},
-	"license": "CC-BY-NC-SA-4.0",
 	"scripts": {
-		"hack": "parcel index.html --no-cache --log-level 4",
-		"ship": "parcel build index.html"
+		"knit": "webpack serve --port 8080 --open",
+		"ship": "webpack"
 	}
 }
