--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
 		"clean-webpack-plugin": "^3.0.0",
 		"coffee-loader": "^2.0.0",
 		"coffeescript": "^2.5.1",
-		"copy-webpack-plugin": "^7.0.0",
-		"html-webpack-plugin": "^5.2.0",
-		"pug": "^3.0.0",
+		"copy-webpack-plugin": "^8.0.0",
+		"html-webpack-plugin": "^5.3.0",
+		"pug": "^3.0.2",
 		"stylus": "^0.54.8",
-		"svelte": "^3.32.3",
+		"svelte": "^3.35.0",
 		"svelte-loader": "^3.0.0",
 		"svelte-preprocess": "^4.6.9",
-		"webpack": "^5.23.0",
+		"webpack": "^5.24.4",
 		"webpack-cli": "^4.5.0",
 		"webpack-dev-server": "^3.11.2"
 	},
 	"scripts": {
-		"knit": "webpack serve --port 8080 --open",
-		"ship": "webpack"
+		"dev": "webpack serve --port 8080 --config webpack.config.dev.js",
+		"prod": "webpack --config webpack.config.prod.js"
 	}
 }
