--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
 		"coffee-loader": "^2.0.0",
 		"coffeescript": "^2.5.1",
 		"copy-webpack-plugin": "^8.0.0",
+		"css-loader": "^5.1.2",
 		"html-webpack-plugin": "^5.3.0",
 		"pug": "^3.0.2",
+		"style-loader": "^2.0.0",
 		"stylus": "^0.54.8",
+		"stylus-loader": "^5.0.0",
 		"svelte": "^3.35.0",
 		"svelte-loader": "^3.0.0",
 		"svelte-preprocess": "^4.6.9",
