--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
 	"license": "CC-BY-NC-SA-4.0",
 	"devDependencies": {
-		"clean-webpack-plugin": "^3.0.0",
+		"clean-webpack-plugin": "^4.0.0-alpha.0",
 		"coffee-loader": "^2.0.0",
 		"coffeescript": "^2.5.1",
-		"copy-webpack-plugin": "^8.1.0",
-		"css-loader": "^5.2.0",
+		"copy-webpack-plugin": "^8.1.1",
+		"css-loader": "^5.2.4",
 		"html-webpack-plugin": "^5.3.1",
 		"pug": "^3.0.2",
 		"style-loader": "^2.0.0",
 		"stylus": "^0.54.8",
 		"stylus-loader": "^5.0.0",
-		"svelte": "^3.35.0",
-		"svelte-loader": "^3.0.0",
-		"svelte-preprocess": "^4.7.0",
-		"webpack": "^5.28.0",
+		"svelte": "^3.37.0",
+		"svelte-loader": "^3.1.1",
+		"svelte-preprocess": "^4.7.2",
+		"webpack": "^5.34.0",
 		"webpack-cli": "^4.6.0",
 		"webpack-dev-server": "^3.11.2"
 	},
