--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"css-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.3.2",
 		"pug": "^3.0.2",
+		"pug-to-svelte": "^1.0.0",
 		"style-loader": "^3.2.1",
 		"stylus": "^0.54.8",
 		"stylus-loader": "^6.1.0",
