--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
 	"license": "CC-BY-NC-SA-4.0",
 	"devDependencies": {
-		"clean-webpack-plugin": "^4.0.0-alpha.0",
 		"coffee-loader": "^3.0.0",
 		"coffeescript": "^2.5.1",
 		"copy-webpack-plugin": "^9.0.1",
@@ -9,6 +8,7 @@
 		"html-webpack-plugin": "^5.3.2",
 		"pug": "^3.0.2",
 		"pug-to-svelte": "^1.0.0",
+		"react-dev-utils": "^11.0.4",
 		"style-loader": "^3.2.1",
 		"stylus": "^0.54.8",
 		"stylus-loader": "^6.1.0",
