internals: refactor WIP: reorg files

--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+	"license": "CC-BY-NC-SA-4.0",
+	"scripts": {
+		"dev": "webpack serve --port 8080 --config webpack.dev.config.js",
+		"build": "webpack --config webpack.config.js"
+	},
 	"devDependencies": {
 		"coffee-loader": "^3.0.0",
 		"coffeescript": "^2.6.1",
@@ -16,10 +21,5 @@
 		"webpack": "^5.65.0",
 		"webpack-cli": "^4.9.1",
 		"webpack-dev-server": "^4.6.0"
-	},
-	"license": "CC-BY-NC-SA-4.0",
-	"scripts": {
-		"start-test-server": "webpack serve --port 8080 --config webpack.test-server.config.js",
-		"generate-production-build": "webpack --config webpack.config.js"
 	}
 }
