--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"license": "CC-BY-NC-SA-4.0",
 	"scripts": {
-		"dev": "webpack serve --port 8080 --config webpack.dev.config.js",
+		"dev": "webpack serve --port 8080 --config webpack.config.dev.js",
 		"build": "webpack --config webpack.config.js"
 	},
 	"devDependencies": {
