--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
 		"coffeescript": "^2.6.1",
 		"css-loader": "^6.7.1",
 		"dotenv-webpack": "^7.1.0",
-		"favicons-webpack-plugin": "^5.0.2",
+		"html-inline-script-webpack-plugin": "^3.0.0",
 		"html-webpack-plugin": "^5.5.0",
 		"pug": "^3.0.2",
 		"pug-to-svelte": "^1.0.0",
-		"react-dev-utils": "^12.0.0",
 		"style-loader": "^3.3.1",
 		"stylus": "^0.57.0",
 		"stylus-loader": "^6.2.0",
