--- a/package.json
+++ b/package.json
@@ -1,9 +1,4 @@
 {
-	"license": "CC-BY-NC-SA-4.0",
-	"scripts": {
-		"dev": "webpack serve --port 8080 --config webpack.config.dev.js",
-		"build": "webpack --config webpack.config.js"
-	},
 	"devDependencies": {
 		"coffee-loader": "^3.0.0",
 		"coffeescript": "^2.6.1",
@@ -21,5 +16,10 @@
 		"webpack": "^5.72.0",
 		"webpack-cli": "^4.9.1",
 		"webpack-dev-server": "^4.8.1"
+	},
+	"license": "CC-BY-NC-SA-4.0",
+	"scripts": {
+		"dev": "webpack serve --config webpack.config.dev.js",
+		"build": "webpack --config webpack.config.js"
 	}
 }
