--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"devDependencies": {
 		"coffee-loader": "^4.0.0",
 		"coffeescript": "^2.7.0",
+		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.7.3",
 		"dotenv-webpack": "^8.0.1",
 		"html-inline-script-webpack-plugin": "^3.1.0",
