--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
 		"html-inline-script-webpack-plugin": "^3.1.0",
 		"html-webpack-plugin": "^5.5.0",
 		"pug": "^3.0.2",
-		"pug-to-svelte": "^1.0.1",
-		"style-loader": "^3.3.1",
+		"pug-to-svelte": "^1.1.0",
+		"style-loader": "^3.3.2",
 		"stylus": "^0.59.0",
 		"stylus-loader": "^7.1.0",
-		"svelte": "^3.55.1",
-		"svelte-loader": "^3.1.5",
-		"webpack": "^5.75.0",
+		"svelte": "^3.57.0",
+		"svelte-loader": "3.1.5",
+		"webpack": "^5.76.2",
 		"webpack-cli": "^5.0.1",
-		"webpack-dev-server": "^4.11.1"
+		"webpack-dev-server": "^4.13.1"
 	},
 	"license": "CC-BY-NC-SA-4.0",
 	"scripts": {
