--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"stylus": "^0.59.0",
 		"stylus-loader": "^7.1.3",
 		"svelte": "^3.59.2",
-		"svelte-loader": "3.1.8",
+		"svelte-loader": "^3.1.9",
 		"webpack": "^5.88.0",
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^4.15.1"
